# lottery-polkadot

./: .gitignore  README.md
.github/workflows/: auto-assign.yml
pallet-lottery/: Cargo.toml
pallet-lottery/src/: benchmarks.rs  lib.rs  mock.rs  rpc.rs  runtime.rs  tests.rs  weights.rs
pallet-lottery/src/staking/: deposit_strategies.rs  mod.rs  withdraw_strategies.rs
randomness/: Cargo.toml
randomness/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
